Avoid clipping full image on details page.

--- a/src/app/features/home/capture-tab/capture-tab.component.scss
+++ b/src/app/features/home/capture-tab/capture-tab.component.scss
@@ -57,15 +57,15 @@ div.mat-title {
     position: absolute;
     top: 8px;
     right: 8px;
-    font-size: 20px;
+    font-size: 16px;
     opacity: 30%;
   }
 
   ion-icon.located {
     position: absolute;
-    top: 32px;
+    top: 28px;
     right: 8px;
-    font-size: 20px;
+    font-size: 16px;
     opacity: 30%;
   }
 
